--- a/src/layouts/_columns.scss
+++ b/src/layouts/_columns.scss
@@ -20,33 +20,25 @@
 ///
 /// @group layout-column
 /// @example njk
-///  <div class="x-flx m__flxColumn">
-///   <div class="x-txt xm__txtAlignFlex-start">
-///    <h4>Displaying two columns</h4>
-///    <p>just <b class="xm__txtColor-secondary xm__txtStyle">.x-cols</b> or <b class="xm__txtColor-secondary xm__txtStyle">.x-cols.m__count</b> or <b class="xm__txtColor-secondary xm__txtStyle">.x-cols.m__count-2</b></p>
-///   </div>
-///   <div class="x-cols xm__width xm__gapingY-30">
-///    {% for avatar in ['aguacate','cereza'] %}
-///     <a href="#" class="x-avatarAureo m__size-lg" >
-///      <img src="https://picsum.photos/seed/{{avatar}}/400/300" alt="Random" loading="lazy">
-///     </a>
-///    {% endfor %}
-///   </div>
-///   <div class="x-txt xm__txtAlignFlex-start">
-///    <h4>Displaying three columns</h4>
-///    <p><b class="xm__txtColor-secondary xm__txtStyle">.x-cols.m__count-3</b></p>
-///   </div>
-///   <div class="x-cols m__count-3 xm__width xm__gapingY-30">
-///    {% for avatar in ['aguacate','cereza','platano'] %}
-///     <a href="#" class="x-avatarAureo m__size-lg" >
-///      <img src="https://picsum.photos/seed/{{avatar}}/400/300" alt="Random" loading="lazy">
-///     </a>
-///    {% endfor %}
-///   </div>
-///  </div>
+///  {% extends "columns.njk" %}
 
 .x-cols {
-	@for $i from 3 through 12 {
+	@include extend-device-interactions {
+		overflow: visible;
+		column-gap: var(--g, var(--gy, 2rem));
+		> * {
+			// margin: 0;
+			// display: inline-block;
+			break-inside: avoid;
+		}
+		&:not([class*="__gapi"]) {
+			> *:not(:last-child) {
+				margin-bottom: var(--g, var(--gx, 2rem));
+			}
+		}
+	}
+
+	@for $i from 2 through 12 {
 		&.m__count-#{$i} {
 			@include extend-viewports-classes {
 				columns: #{$minColumnSize/$i * 3} #{$i};
@@ -55,15 +47,8 @@
 	}
 	// default
 	&.m__count,
-	&.m__count-2,
 	&:not([class*="__co"]) {
 		// Count
 		columns: #{$minColumnSize/2 * 3} 2;
-	}
-
-	> * {
-		// margin: 0;
-		// display: inline-block;
-		break-inside: avoid;
 	}
 }
